# KonceptOS

./: .gitignore  AGENT.md  COMMANDS.md  KONCEPTOS2_MVP.md  README.md  README中文版.md  TUTORIAL中文版.md  fireboy_spec.md  fireboy_v4.html  gitignore  konceptos.py  konceptos2_mvp.py  konceptos2_web.py  main.py  mario_v1.html  mvp_big_project_spec.md  package-lock.json  package.json  pyproject.toml  requirements.txt  seed_2d_platformer.json  supermario_fca_spec.md  tsconfig.json
changelog/: v2.2.0.md
deprecated/: konceptos.py.deprecated
docs/: KONCEPTOS2_MVP.md  TUTORIAL.md  坦克大战.md
examples/: tank.html
examples/specs/: mvp_big_project_spec.md
konceptos/: KonceptOS_v21_architecture.md  __init__.py  __main__.py  cli.py  codegen.py  engine.py  llm.py  seed.py  test_runner.py  util.py  verify.py
konceptos-cli/: README.md  README_CN.md  package-lock.json  package.json
konceptos-cli/src/lib/: fca.js  llm.js  seed.js  storage.js
konceptos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: output.html  prd.md  selenium_test_hooks.py
tests/.konceptos/: workspace.json
webui/: index.html
