[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "konceptos"
version = "2.1"
description = "KonceptOS — FCA-based AI code generation framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["click", "selenium", "webdriver-manager"]

[project.scripts]
konceptos = "konceptos.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["konceptos*"]
